--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,19 @@
            <version>17.0.6</version>
        </dependency> -->
 
-
 <!--        <dependency>-->
 <!--            <groupId>de.jensd</groupId>-->
 <!--            <artifactId>fontawesomefx</artifactId>-->
 <!--            <version>8.9</version>-->
 <!--        </dependency>-->
-<!--         https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc-->
+<!--        -->
+        <!-- https://mvnrepository.com/artifact/de.jensd/fontawesomefx-fontawesome -->
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-fontawesome</artifactId>
+            <version>4.7.0-9.1.2</version>
+        </dependency>
+        <!--         https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc-->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
