--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,17 @@
 
     <dependencies>
 
-       <!-- <dependency>
-           <groupId>org.openjfx</groupId>
-           <artifactId>javafx-controls</artifactId>
-           <version>17.0.6</version>
-       </dependency> -->
+       <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>24</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>24</version>
+        </dependency>
 
 <!--        <dependency>-->
 <!--            <groupId>de.jensd</groupId>-->
